# rust-nation-template

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README.md
.devcontainer/: Dockerfile  devcontainer.json
applications/c/drivers/: Makefile
applications/c/example_app/: Makefile
applications/c/ui/: Makefile  main.c
applications/rust/example_app/: Cargo.toml  layouts
applications/rust/example_app/src/: main.rs
applications/rust/service/: Cargo.toml  Makefile  raspberry_pi_pico.ld
applications/rust/service/.cargo/: config
applications/rust/service/src/: main.rs
applications/smarthome/: Makefile
docs/: index.html
kernel/: Cargo.toml
kernel/drivers/: Cargo.toml
kernel/drivers/src/: lib.rs  smarthome.rs  smarthome_written.rs
kernel/microbit_v2/: Cargo.toml  Makefile  layout.ld
kernel/pico_explorer_base/: Cargo.toml  Makefile  layout.ld
kernel/pico_explorer_base/src/: io.rs  main.rs
kernel/raspberry_pi_pico/: Cargo.toml  Makefile  layout.ld
kernel/raspberry_pi_pico/src/: main.rs
kernel/smarthome/: Cargo.toml  Makefile  layout.ld
slides/: README.md  index.html
