[workspace]
members = [
    "kernel/microbit_v2",
    "kernel/drivers"
]
exclude = [
   "tock"
]

[workspace.package]
version = "0.1.0"
authors = ["Tock Project Developers <tock-dev@googlegroups.com>"]
edition = "2021"

[profile.dev]
panic = "abort"
lto = false
opt-level = "z"
debug = true

[profile.release]
panic = "abort"
lto = true
opt-level = "z"
debug = true
codegen-units = 1